<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.7">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/nombre" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/apellido" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/correo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/ciudad" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/genero" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/tipo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.3">

                <EditText
                    android:id="@+id/updateNombre"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    />
                <EditText
                    android:id="@+id/updateApellido"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    />
                <EditText
                    android:id="@+id/updateCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>
                <Spinner
                    android:id="@+id/updateCity"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:entries="@array/cities"/>
                <Spinner
                    android:id="@+id/updateGender"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:entries="@array/gender"/>
                <Spinner
                    android:id="@+id/updateUserType"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:entries="@array/user_type"/>


            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/fechaNacimiento" />
        <DatePicker
            android:id="@+id/updateBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/fotoPerfil" />
        <ImageView
            android:id="@+id/updateProfilePicture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_galeria"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/btnGaleria" />

            <Button
                android:id="@+id/btn_camara"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/btnCamara" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:background="@color/colorContinuar"/>

    </LinearLayout>
</ScrollView>