<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_correoAmigo"
        android:textSize="24sp" />
    <TextView
        android:id="@+id/tv_correoAmigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_eliminarAmigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_eliminarAmigo"
        android:background="@color/colorAdvertencia"/>

    <Button
        android:id="@+id/btn_enviarMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_enviarMensaje" />

</LinearLayout>