<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <Switch
            android:id="@+id/switchNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/switchNewPassword" />

        <Switch
            android:id="@+id/switchNewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/switchNewEmail" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.7">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/actual_password" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/new_password" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/repeatPassword" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/new_email" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.3">

                <EditText
                    android:id="@+id/actualPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:enabled="false"
                    android:inputType="textPassword"
                    />
                <EditText
                    android:id="@+id/updatePassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:enabled="false"
                    android:inputType="textPassword"
                    />
                <EditText
                    android:id="@+id/updatePasswordSecond"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:enabled="false"
                    android:inputType="textPassword"/>

                <EditText
                    android:id="@+id/updateEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:enabled="false" />


            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_updateLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:background="@color/colorContinuar"
            android:enabled="false"/>

    </LinearLayout>

</ScrollView>
